--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,7 +9,7 @@
         <a style="margin: 0px 50%;" class="nav-link" [routerLink]="'/inicio'">Inicio</a>
         <a style="margin: 0px 50%;" class="nav-link" [routerLink]="'/usuarios'">Usuarios</a>
         <a style="margin: 0px 50%;" class="nav-link" [routerLink]="'/usuarios'">Materias</a>
-        <a style="margin: 0px 50%;" class="nav-link" href="#"><i class="fa-solid fa-user"></i></a>
+        <a style="margin: 0px 50%;" class="nav-link" [routerLink]="'/updateusr'"><i class="fa-solid fa-user"></i></a>
       </div>
     </div>
   </div>
