--- a/src/app/perfil-alumno/perfil-alumno.component.html
+++ b/src/app/perfil-alumno/perfil-alumno.component.html
@@ -2,4 +2,58 @@
 
 <div class="perfil-alumno">
     <h1>Bienvenido, (Alumno)</h1>
+  
+    <div class="container mt-5">
+      <h2 class="mt-4">Cursos Disponibles</h2>
+  
+      <div *ngIf="asesoriasEnriquecidas.length === 0" class="text-center text-muted mt-3">
+        No hay asesorías disponibles.
+      </div>
+  
+      <div class="row row-cols-1 row-cols-md-2 g-4 mt-4" *ngIf="asesoriasEnriquecidas.length > 0">
+        <div class="col" *ngFor="let asesoria of asesoriasEnriquecidas">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">{{ asesoria.materiaNombre }}</h5> 
+              <p class="card-text">
+                <i class="fas fa-calendar-day"></i> <strong>Inicio:</strong> {{ asesoria.fecha_inicio }} <br>
+                <i class="fas fa-calendar-check"></i>  <strong>Fin:</strong> {{ asesoria.fecha_fin }} <br>
+                <i class="fas fa-calendar-week"></i> <strong>Días:</strong> {{ asesoria.dias }} <br>
+                <i class="fas fa-clock"></i> <strong>Horario:</strong> {{ asesoria.horario_inicio }} - {{ asesoria.horario_fin }}
+              </p>
+              <div class="d-flex justify-content-center">
+                <a class="btn btn-primary" [routerLink]="['/detalle', asesoria.id_asesoria]">
+                  Ver más
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <h2 class="mt-4">Asesorías Asignadas</h2>
+
+    <div *ngIf="asesoriasAsignadas.length === 0" class="text-center text-muted mt-3">
+      No tienes asesorías asignadas.
+    </div>
+
+    <div class="row row-cols-1 row-cols-md-2 g-4 mt-4" *ngIf="asesoriasAsignadas.length > 0">
+      <div class="col" *ngFor="let asesoria of asesoriasAsignadas">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">{{ asesoria.materiaNombre }}</h5>
+            <p class="card-text">
+              <i class="fas fa-calendar-week"></i> <strong>Días:</strong> {{ asesoria.dias }} <br>
+              <i class="fas fa-clock"></i> <strong>Horario:</strong> {{ asesoria.horario_inicio }} - {{ asesoria.horario_fin }}
+            </p>
+            <div class="d-flex justify-content-center">
+              <a class="btn btn-primary" [routerLink]="['/detalle', asesoria.id_asesoria]">
+                Ver más
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
 </div>
+  
