--- a/src/app/perfil-alumno/perfil-alumno.component.html
+++ b/src/app/perfil-alumno/perfil-alumno.component.html
@@ -6,12 +6,12 @@
     <div class="container mt-5">
       <h2 class="mt-4">Cursos Disponibles</h2>
   
-      <div *ngIf="asesoriasEnriquecidas.length === 0" class="text-center text-muted mt-3">
+      <div *ngIf="asesorias.length === 0" class="text-center text-muted mt-3">
         No hay asesorías disponibles.
       </div>
   
-      <div class="row row-cols-1 row-cols-md-2 g-4 mt-4" *ngIf="asesoriasEnriquecidas.length > 0">
-        <div class="col" *ngFor="let asesoria of asesoriasEnriquecidas">
+      <div class="row row-cols-1 row-cols-md-2 g-4 mt-4" *ngIf="asesorias.length > 0">
+        <div class="col" *ngFor="let asesoria of asesorias">
           <div class="card h-100">
             <div class="card-body">
               <h5 class="card-title">{{ asesoria.materiaNombre }}</h5> 
