--- a/src/app/perfil-alumno/perfil-alumno.component.css
+++ b/src/app/perfil-alumno/perfil-alumno.component.css
@@ -25,7 +25,6 @@
     display: inline-block;
   }
   
-  /* Estilo para los botones */
   .btn-primary {
     background-color: #3E5C76;
     border: none;
@@ -51,4 +50,6 @@
   .card:hover {
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
   }
-  
+  .container{
+    margin-bottom: 50px;
+  }
