--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
       <div class="navbar-nav">
         <a style="margin: 0px 50%;" class="nav-link" [routerLink]="'/inicio'">Inicio</a>
         <a style="margin: 0px 50%;" class="nav-link" [routerLink]="'/usuarios'">Usuarios</a>
-        <a style="margin: 0px 50%;" class="nav-link" [routerLink]="'/usuarios'">Materias</a>
+        <a style="margin: 0px 50%;" class="nav-link" [routerLink]="'/solicitud'">Solicitar Asesoria</a>
         <a style="margin: 0px 50%;" class="nav-link" [routerLink]="'/updateusr'"><i class="fa-solid fa-user"></i></a>
       </div>
     </div>
