--- a/src/app/updateusr/updateusr.component.html
+++ b/src/app/updateusr/updateusr.component.html
@@ -21,7 +21,7 @@
                 
                 <div class="form-group">
                     <label for="nombre">Nombre</label>
-                    <input 
+                    <input disabled
                         type="text" 
                         id="nombre" 
                         name="nombre" 
@@ -33,7 +33,7 @@
 
                 <div class="form-group">
                     <label for="apellidos">Apellidos</label>
-                    <input 
+                    <input disabled
                         type="text" 
                         id="apellidos" 
                         name="apellidos" 
