imsearching for real love

--- a/src/app/detalle-disponibles/detalle-disponibles.component.html
+++ b/src/app/detalle-disponibles/detalle-disponibles.component.html
@@ -29,11 +29,10 @@
         <p>{{ asesoria.maestroNombre }}</p>
       </div>
 
-      <div class="text-center mt-4">
-        <button class="btn btn-primary">Inscribirme</button>
-      </div>
-
       
+      <div class="text-center mt-4">
+        <button class="btn btn-primary">Dar de Baja</button>
+      </div>
     </div>
 
     <div *ngIf="!asesoria" class="text-center text-muted mt-3">
