--- a/src/app/perfil-tutor/perfil-tutor.component.html
+++ b/src/app/perfil-tutor/perfil-tutor.component.html
@@ -1,4 +1,39 @@
 <app-navbar></app-navbar>
+
 <div class="perfil-tutor">
-    <h1>Bienvenido,  (Tutor)</h1>
+    <h1>Bienvenido, (Tutor)</h1>
+  
+    <div class="container mt-5">
+            <h2 class="mt-4">Cursos Pendientes</h2>
+          
+            <div *ngIf="asesoriasPendientes.length === 0" class="text-center text-muted mt-3">
+              No hay cursos pendientes para aceptar.
+            </div>
+          
+            <div class="row row-cols-1 row-cols-md-2 g-4 mt-4" *ngIf="asesoriasPendientes.length > 0">
+              <div class="col" *ngFor="let asesoria of asesoriasPendientes">
+                <div class="card h-100">
+                  <div class="card-body">
+                    <h5 class="card-title">{{ asesoria.materiaNombre }}</h5> 
+                    <p class="card-text">
+                      <i class="fas fa-calendar-day"></i> <strong>Inicio:</strong> {{ asesoria.fecha_inicio || 'No especificado' }} <br>
+                      <i class="fas fa-calendar-check"></i>  <strong>Fin:</strong> {{ asesoria.fecha_fin || 'No especificado' }} <br>
+                      <i class="fas fa-calendar-week"></i> <strong>Días:</strong> {{ asesoria.dias }} <br>
+                      <i class="fas fa-clock"></i> <strong>Horario:</strong> {{ asesoria.horario_inicio }} - {{ asesoria.horario_fin }}
+                    </p>
+                    <div class="d-flex justify-content-center">
+                      <a class="btn btn-primary" [routerLink]="['/detalle', asesoria.id_asesoria]">
+                        Ver más
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+      <hr>
+    <h2 class="mt-4">Asesorías Asignadas</h2>
+
+    
 </div>
+</div>
+  
