--- a/src/app/perfil-tutor/perfil-tutor.component.html
+++ b/src/app/perfil-tutor/perfil-tutor.component.html
@@ -16,13 +16,11 @@
                   <div class="card-body">
                     <h5 class="card-title">{{ asesoria.materiaNombre }}</h5> 
                     <p class="card-text">
-                      <i class="fas fa-calendar-day"></i> <strong>Inicio:</strong> {{ asesoria.fecha_inicio || 'No especificado' }} <br>
-                      <i class="fas fa-calendar-check"></i>  <strong>Fin:</strong> {{ asesoria.fecha_fin || 'No especificado' }} <br>
                       <i class="fas fa-calendar-week"></i> <strong>Días:</strong> {{ asesoria.dias }} <br>
                       <i class="fas fa-clock"></i> <strong>Horario:</strong> {{ asesoria.horario_inicio }} - {{ asesoria.horario_fin }}
                     </p>
                     <div class="d-flex justify-content-center">
-                      <a class="btn btn-primary" [routerLink]="['/detalle', asesoria.id_asesoria]">
+                      <a class="btn btn-primary" [routerLink]="['/aceptacion', asesoria.id_asesoria]">
                         Ver más
                       </a>
                     </div>
