--- a/src/app/detalle-disponibles/detalle-disponibles.component.html
+++ b/src/app/detalle-disponibles/detalle-disponibles.component.html
@@ -31,7 +31,7 @@
 
       
       <div class="text-center mt-4">
-        <button class="btn btn-primary">Dar de Baja</button>
+        <button class="btn btn-primary" (click)="baja()">Dar de baja</button>
       </div>
     </div>
 
