--- a/src/app/detalle-asesoria/detalle-asesoria.component.html
+++ b/src/app/detalle-asesoria/detalle-asesoria.component.html
@@ -30,7 +30,7 @@
       </div>
 
       <div class="text-center mt-4">
-        <button class="btn btn-primary">Inscribirme</button>
+        <button class="btn btn-primary" (click)="inscribirse()">Inscribirme</button>
       </div>
 
       
