--- a/src/app/solicitud/solicitud.component.css
+++ b/src/app/solicitud/solicitud.component.css
@@ -1,5 +1,3 @@
-
-
 p {
     color: #444;
     font-size: 16px;
@@ -40,9 +38,6 @@ button.btn-success {
     background-color: #3E5C76;
     color: #fff;
 }
-.container{
-    padding:80px ;
-}
 
 button.btn-success:hover {
     background-color: #4f718f;
@@ -63,6 +58,17 @@ button.btn-secondary {
     color: #fff;
 }
 
+.asesoria-item {
+    padding: 10px;
+    background-color: #f8f8f8;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.container {
+    padding: 80px;
+}
+
 @media (max-width: 768px) {
     .container {
         padding: 15px;
@@ -78,3 +84,22 @@ button.btn-secondary {
         font-size: 12px;
     }
 }
+
+  .text-muted {
+    font-size: 16px;
+  }
+  
+  .btn-primary {
+    background-color: #881600;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    text-decoration: none;
+  }
+  
+  .btn-primary:hover {
+    background-color: #9c240c;
+  }
+  
+
+  
