--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,10 +4,23 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="navbar-nav ms-auto"> <!-- Alinea los enlaces a la derecha -->
-      <a class="nav-link" [routerLink]="'/inicio'">Inicio</a>
+    <div class="navbar-nav ms-auto"> 
+      <a class="nav-link" [routerLink]="'/perfil'">Inicio</a>
       <a class="nav-link" [routerLink]="'/calendario'">Calendario</a>
-      <a class="nav-link" [routerLink]="'/solicitud'">Solicitar Asesoría</a>
+      <a 
+      *ngIf="getUsuarioOcupacion() === 'alumno'" 
+      class="nav-link" 
+      [routerLink]="'/solicitud'"
+    >
+      Solicitar Asesoría
+    </a>
+    <a 
+      *ngIf="getUsuarioOcupacion() === 'tutor'" 
+      class="nav-link" 
+      [routerLink]="'/crear-asesoria'"
+    >
+      Crear Asesoría
+    </a>
       <a class="nav-link" [routerLink]="'/updateusr'"><i class="fa-solid fa-user"></i></a>
       <a *ngIf="isLoggedIn()" class="nav-link" (click)="logout()">
         <i class="fa-solid fa-right-from-bracket"></i> 
