--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,7 +17,7 @@
     <a 
       *ngIf="getUsuarioOcupacion() === 'tutor'" 
       class="nav-link" 
-      [routerLink]="'/crear-asesoria'"
+      [routerLink]="'/creacion'"
     >
       Crear Asesoría
     </a>
