Detalle de alumnos
alumnos

--- a/src/app/perfil-tutor/perfil-tutor.component.html
+++ b/src/app/perfil-tutor/perfil-tutor.component.html
@@ -45,7 +45,7 @@
               <i class="fas fa-clock"></i> <strong>Horario:</strong> {{ asesoria.horario_inicio }} - {{ asesoria.horario_fin }}
             </p>
             <div class="d-flex justify-content-center">
-              <a class="btn btn-primary" [routerLink]="['/detalle2', asesoria.id_asesoria]">
+              <a class="btn btn-primary" [routerLink]="['/detallet', asesoria.id_asesoria]">
                 Ver más
               </a>
             </div>
