--- a/src/app/detalle-tutor/detalle-tutor.component.html
+++ b/src/app/detalle-tutor/detalle-tutor.component.html
@@ -58,9 +58,9 @@
     <hr>
     <br><br>
       
-      <!-- <div class="text-center mt-4">
-        <button class="btn btn-primary" (click)="baja()">Dar de baja</button>
-      </div> -->
+       <div class="text-center mt-4">
+        <button class="btn btn-primary" (click)="baja()">Cancelar Asesoría</button>
+      </div> 
 
     </div>
 
