--- a/src/app/perfil-admin/perfil-admin.component.html
+++ b/src/app/perfil-admin/perfil-admin.component.html
@@ -40,7 +40,7 @@
                 <i class="fas fa-clock"></i> <strong>Horario:</strong> {{ asesoria.horario_inicio }} - {{ asesoria.horario_fin }}
               </p>
               <div class="d-flex justify-content-center">
-                <a class="btn btn-primary" [routerLink]="['/detalle', asesoria.id_asesoria]">
+                <a class="btn btn-primary" [routerLink]="['/detallet', asesoria.id_asesoria]">
                   Ver más
                 </a>
               </div>
@@ -49,5 +49,39 @@
         </div>
       </div>
     </div>
+
+    <div class="container mt-5">
+      <h2 class="mt-4">Cursos Pendientes</h2>
+  
+      <!-- Mensaje cuando no hay asesorías disponibles -->
+      <div *ngIf="asesoriasActivas.length === 0" class="text-center text-muted mt-3">
+        No hay asesorías disponibles.
+      </div>
+  
+      <!-- Mostrar tarjetas de asesorías activas -->
+      <div class="row row-cols-1 row-cols-md-2 g-4 mt-4" *ngIf="asesoriasPendientes.length > 0">
+        <div class="col" *ngFor="let asesoria of asesoriasPendientes">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">{{ asesoria.materiaNombre }}</h5>
+              <p class="card-text">
+                <i class="fas fa-calendar-day"></i> <strong>Inicio:</strong> {{ asesoria.fecha_inicio }} <br>
+                <i class="fas fa-calendar-check"></i> <strong>Fin:</strong> {{ asesoria.fecha_fin }} <br>
+                <i class="fas fa-calendar-week"></i> <strong>Días:</strong> {{ asesoria.dias }} <br>
+                <i class="fas fa-clock"></i> <strong>Horario:</strong> {{ asesoria.horario_inicio }} - {{ asesoria.horario_fin }}
+              </p>
+              <div class="d-flex justify-content-center">
+                <a class="btn btn-primary" [routerLink]="['/aceptacion', asesoria.id_asesoria]">
+                  Ver más
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
   </div>
   
