--- a/src/app/perfil-admin/perfil-admin.component.html
+++ b/src/app/perfil-admin/perfil-admin.component.html
@@ -1,20 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-custom">
-    <div class="container-fluid">
-      <a class="navbar-brand" [routerLink]="'/perfil-admin'">
-        U A A
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="navbar-nav ms-auto">
-        <a class="nav-link" [routerLink]="'/perfil-admin'">Inicio</a>
-        <a class="nav-link" [routerLink]="'/updateusr'"><i class="fa-solid fa-user"></i></a>
-        <a *ngIf="isLoggedIn()" class="nav-link" (click)="logout()">
-          <i class="fa-solid fa-right-from-bracket"></i>
-        </a>
-      </div>
-    </div>
-  </nav>
+<app-navbar></app-navbar>
   
   <div class="perfil-tutor">
     <h1>Bienvenido, Admin</h1>
