--- a/src/app/altas2/altas2.component.html
+++ b/src/app/altas2/altas2.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <!-- carrera-materia.component.html -->
 <div class="container mt-5">
     <h2 class="text-center">Agregar Carrera o Materia</h2>
