--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -46,7 +46,15 @@
       class="nav-link" 
       [routerLink]="'/altas'"
     >
-      A
+      Carreras y Materias
+    </a>
+
+     <a 
+      *ngIf="getUsuarioOcupacion() === 'admin'" 
+      class="nav-link" 
+      [routerLink]="'/altas2'"
+    >
+      Alta Carreras y Materias
     </a>
       <a class="nav-link" [routerLink]="'/updateusr'"><i class="fa-solid fa-user"></i></a>
       <a *ngIf="isLoggedIn()" class="nav-link" (click)="logout()">
