--- a/src/app/registro/registro.component.css
+++ b/src/app/registro/registro.component.css
@@ -1,7 +1,7 @@
 .register {
     display: flex;
     height: 100vh;
-    background-color: #f4f4f9;
+    background-color: #c0c0d1;
   }
   
   /* Columna de la izquierda con la imagen */
