--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,15 +1,16 @@
 <div class="login">
-    <div class="content">
-      <h1>CONECTA TUTOR</h1>
-      <h3>Descubre, conecta y aprende iniciando sesión</h3>
-      <form (ngSubmit)="onSubmit()" #form="ngForm">
-        <label for="usuario">ID</label>
-        <input type="number" id="id" [(ngModel)]="credentials.id" name="id" required>
-        
-        <label for="contrasena">Contraseña</label>
-        <input type="password" id="contraseña" [(ngModel)]="credentials.password" name="contraseña" required>
-        
-        <button type="submit">Iniciar Sesión</button>
-      </form>      
-    </div>
+  <div class="content">
+    <h1>CONECTA TUTOR</h1>
+    <h3>Descubre, conecta y aprende iniciando sesión</h3>
+
+    <form (ngSubmit)="onSubmit()" #form="ngForm">
+      <label for="id">ID</label>
+      <input type="number" id="id" [(ngModel)]="credentials.id" name="id" required>
+      
+      <label for="password">Contraseña</label>
+      <input type="password" id="password" [(ngModel)]="credentials.password" name="password" required>
+      
+      <button type="submit" [disabled]="!form.valid">Iniciar Sesión</button>
+    </form>      
+  </div>
 </div>
