--- a/src/app/updateusr/updateusr.component.html
+++ b/src/app/updateusr/updateusr.component.html
@@ -25,7 +25,7 @@
                         type="text" 
                         id="nombre" 
                         name="nombre" 
-                        [(ngModel)]="usuario.nombre" 
+                        [(ngModel)]="usuario.Nombre" 
                         required 
                         class="form-control" 
                         placeholder="Ingresa tu nombre">
@@ -62,7 +62,7 @@
                         type="password" 
                         id="password" 
                         name="password" 
-                        [(ngModel)]="usuario.password" 
+                        [(ngModel)]="nuevaPassword" 
                         required 
                         class="form-control" 
                         placeholder="Ingresa una nueva contraseña">
