Cambios en solicitud pero no jalan
no funciona help

--- a/src/app/solicitud/solicitud.component.html
+++ b/src/app/solicitud/solicitud.component.html
@@ -6,8 +6,8 @@
   <!-- Selección de materias -->
   <label for="materias">Materias:</label>
   <select id="materias" [(ngModel)]="materiasSeleccionadas" multiple>
-    <option *ngFor="let materia of materias" [value]="materia.nombre">
-      {{ materia.nombre }}
+    <option *ngFor="let materia of materias" [value]="materia.Nombre">
+      {{ materia.Nombre }}
     </option>
   </select>
 
