Agregar Sábado al formulario
formulario Solicitar Asesoria

--- a/src/app/solicitud/solicitud.component.html
+++ b/src/app/solicitud/solicitud.component.html
@@ -28,6 +28,9 @@
 
     <input type="checkbox" class="btn-check" id="btncheck5" [checked]="diasSeleccionados.includes('Viernes')" (change)="agregarDia('Viernes')" />
     <label class="btn btn-outline-primary" for="btncheck5">Viernes</label>
+
+    <input type="checkbox" class="btn-check" id="btncheck6" [checked]="diasSeleccionados.includes('Sábado')" (change)="agregarDia('Sábado')" />
+    <label class="btn btn-outline-primary" for="btncheck6">Sábado</label>
   </div>
 
   <!-- Selección de hora -->
